# gp

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  bench_mvn_first_get.cpp
bench/: CMakeLists.txt  applied_BasicMVN.cpp  applied_MVN.cpp  applied_MultivariateFNormalSufficient.cpp  bench_basic_mvn.cpp  bench_mvn.cpp  bench_old_mvn.cpp  scaling_constructor_BasicMVN.cpp  scaling_constructor_MVN.cpp  scaling_constructor_MultivariateFNormalSufficient.cpp  scaling_first_get_BasicMVN.cpp  scaling_first_get_MVN.cpp  scaling_first_get_MultivariateFNormalSufficient.cpp  scaling_get_BasicMVN.cpp  scaling_get_MVN.cpp  scaling_get_MultivariateFNormalSufficient.cpp  scaling_get_with_derivs_BasicMVN.cpp  scaling_get_with_derivs_MVN.cpp  scaling_get_with_derivs_MultivariateFNormalSufficient.cpp  scaling_second_get_BasicMVN.cpp  scaling_second_get_MVN.cpp  scaling_second_get_MultivariateFNormalSufficient.cpp
data/gpi_test/: gen_gpi_data.py
doc/: main.md
include/: BasicMVN.h  ConstEigenObject.h  Covariance1DFunction.h  CovarianceMatrix.h  DoubleInputCachedVersionTracker.h  DoubleInputVersionTracker.h  EpsilonVector.h  FNormal.h  ForwardDeclarations.h  Functor.h  GPI.h  GPMatrix.h  GPMatrixBase.h  GPMatrixDifference.h  GPMatrixMatrixProduct.h  GPMatrixProduct.h  GPMatrixSum.h  GaussianProcessInterpolation.h  Holder.h  LDLT.h  Linear1DFunction.h  MVN.h  Matrix.h  MatrixDifference.h  MatrixProduct.h  MatrixSum.h  MultivariateFNormalSufficient.h  Observer.h  PosteriorCovarianceMatrix.h  PriorCovarianceMatrix.h  Scalar.h  SingleInputCachedVersionTracker.h  SolveDecomposedMatrix.h  SymmetricMatrixFromFunction.h  Test.h  VectorFromFunction.h  benchmark_helpers.h  bivariate_functions.h  covariance_functions.h  macros.h  (+5 more)
include/internal/: ApplyMatrix.h  BinaryExpr.h  BinaryOp.h  BinaryOperations.h  BuiltinMatrixDifference.h  BuiltinScalarDifference.h  BuiltinScalarQuotient.h  Cache.h  CachePlugins.h  ConstScalar.h  Decomposition.h  DiagonalMatrixFromVector.h  ForwardDeclarations.h  Functor.h  GPBase.h  LDLT.h  LDLTPolicy.h  LogDeterminant.h  Matrix.h  MatrixBase.h  MatrixBuiltinDifference.h  MatrixBuiltinProduct.h  MatrixBuiltinQuotient.h  MatrixBuiltinSum.h  MatrixDifference.h  MatrixFromBivariateFunctor.h  MatrixFromFunctor.h  MatrixFromScalar.h  MatrixFromThinAir.h  MatrixFromUnivariateFunctor.h  MatrixMatrixProduct.h  MatrixOpposite.h  MatrixScalarDifference.h  MatrixScalarProduct.h  MatrixScalarQuotient.h  MatrixScalarSum.h  MatrixSum.h  OperationsBase.h  Scalar.h  ScalarBase.h  (+26 more)
src/: CMakeLists.txt  FNormal.h  GaussianProcessInterpolation.cpp  MultivariateFNormalSufficient.cpp
test/: CMakeLists.txt  base.h  fwd.h  test_BasicMVN.cpp  test_Cache.cpp  test_ConstEigenObject.cpp  test_Covariance1DFunction.cpp  test_CovarianceMatrix.cpp  test_EpsilonVector.cpp  test_Functor.cpp  test_GPI.cpp  test_GPMatrix.cpp  test_Holder.cpp  test_LDLT.cpp  test_Linear1DFunction.cpp  test_MVN.cpp  test_MVN_deriv.cpp  test_MatrixDifference.cpp  test_MatrixFromBivariateFunctor.cpp  test_MatrixFromFunction.cpp  test_MatrixFromUnivariateFunctor.cpp  test_MultivariateFNormalSufficient.cpp  test_PosteriorCovarianceMatrix.cpp  test_PriorCovarianceMatrix.cpp  test_Scalar.cpp  test_Simple.cpp  test_SolveDecomposedMatrix.cpp  test_SymmetricMatrixFromBivariateFunctor.cpp  test_SymmetricMatrixFromFunction.cpp  test_Test.cpp  test_VectorFromFunction.cpp  test_covariance_functions.cpp  test_epsilon_mean_integration.cpp  test_get_is_function_of.cpp  test_get_with_derivs_MVN.cpp  test_make_function.cpp  test_mean_functions.cpp  test_mvn_MVNEvaluate.cpp  test_posterior_covariance_matrix.cpp  test_rows_n_cols.cpp  (+3 more)
